ADD project Static, SpecialistLogin handler, GetByLogin for specialists.go REFACTOR SpecialistRegister handler, Get -> GetByID
